feat: Add dynamic geolocation enforcement for courses

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ node_modules/
 .env.*.local
 
 # Expo/React Native
-facial-recognition/
+# facial-recognition/ - DO NOT IGNORE (Needed for EAS Build)
 .expo/
 dist/
 web-build/
