--- a/facial-recognition/app.json
+++ b/facial-recognition/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "facial-recognition",
+    "name": "mbsarari",
     "slug": "facial-recognition",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -20,7 +20,8 @@
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "windowSoftInputMode": "adjustPan"
+      "windowSoftInputMode": "adjustPan",
+      "package": "com.muaweb.facialrecognition"
     },
     "web": {
       "output": "static",
@@ -34,16 +35,31 @@
           "image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff",
+          "backgroundColor": "#1E40AF",
           "dark": {
-            "backgroundColor": "#000000"
+            "backgroundColor": "#1E40AF"
           }
+        }
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location to verify your presence in class for attendance marking.",
+          "locationWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location to verify your presence in class for attendance marking.",
+          "isIosBackgroundLocationEnabled": false,
+          "isAndroidBackgroundLocationEnabled": false
         }
       ]
     ],
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "4fec1e04-038c-462c-ae4c-dd6b8b944c9c"
+      }
     }
   }
 }
